# monarch-swarm-optimization

./: CHANGELOG.md  README.md  USAGE.md  pyproject.toml
examples/: basic_usage.py  mkp_example.py
src/mso/: __init__.py  core.py  utils.py
