[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monarch-swarm-optimization"
version = "0.1.0"
description = "A Python implementation of Monarch Swarm Optimization algorithm"
readme = "README.md"
authors = [{name = "Emrullah Gazioglu", email = "emrullahgazioglu@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/gazioglue/monarch-swarm-optimization"